# maiq-web-api

./: .gitignore  .gitmodules  Cargo.toml  Shuttle.toml  maiq-web.postman_collection.json  railwaybuild.sh  railwaystart.sh  readme.md
default/: fri.json  mon.json  sat.json  thu.json  tue.json  wed.json
docs/: api_returns.md  api_routes.md
maiq-api-models/: Cargo.toml
maiq-api-models/src/: lib.rs  polling.rs
maiq-api-wrapper/: Cargo.toml
maiq-api-wrapper/src/: api.rs  lib.rs  polling.rs
sql/: select.sql
sql/migrations/: 20221219231258_init.sql
src/: cache.rs  env.rs  lib.rs  main.rs  utils.rs
src/api/: error.rs  mod.rs  queries.rs  routes.rs  utils.rs
src/db/: commands.rs  mod.rs  queries.rs
src/storage/: cache.rs  mod.rs  mongo.rs
