[package]
name = "maiq-web"
version = "0.2.0"
edition = "2021"
publish = false


[profile.release]
strip = true
lto = true
opt-level = "s"

[dependencies]
thiserror = "1.0.37"
serde = { version = "1.0.151", features = ["serde_derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenvy = "0.15.6"
maiq-parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.6.4" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4", "reqwest", "tokio-runtime"] }
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
openssl = { version = "0.10.45", features = ["vendored"] }
openssl-sys = { version = "0.9.80", features = ["openssl-src", "vendored"] }
