[package]
name = "maiq-web"
version = "0.3.0"
edition = "2021"
publish = false


[profile.release]
strip = true
lto = true
opt-level = "s"

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4", "reqwest", "tokio-runtime"] }

maiq-parser = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.6.4" }
maiq-api-models = { path = "./maiq-api-models" }

serde = { version = "1.0.151", features = ["serde_derive"] }

thiserror = "1.0.37"
dotenvy = "0.15.6"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
chrono = { version = "0.4.23", features = ["serde"] }

openssl = { version = "0.10.45", features = ["vendored"] }
openssl-sys = { version = "0.9.80", features = ["openssl-src", "vendored"] }