[package]
name = "maiq-api-models"
version = "0.1.3"
edition = "2021"

[lib]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.0" }
serde = { version = "1.0.152", features = ["serde_derive"] }
