[package]
name = "maiq-api-wrapper"
version = "0.1.3"
edition = "2021"

[lib]

[features]
reqwest = ["dep:reqwest", "dep:lazy_static"]
comparing = []

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", version = "0.3.0", branch = "dev" }
serde = { version = "1.0.152", features = ["serde_derive"] }

reqwest = { version = "0.11.14", features = ["json"], optional = true }
lazy_static = { version = "1.4.0", optional = true }
