[package]
name = "maiq-api-wrapper"
version = "0.1.4"
edition = "2021"

[lib]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
maiq-shared = { git = "https://github.com/pashokitsme/maiq-parser", branch = "tl", version = "0.4.0"  }
serde = { version = "1.0.152", features = ["serde_derive"] }

reqwest = { version = "0.11.14", features = ["json"] }
lazy_static = { version = "1.4.0" }
